helm/grafana-ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lgtm-stack-grafana
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.meiot.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lgtm-stack-grafana
            port:
              number: 80
